--- a/V3/CHE/ELC/EMF_measurement/locale/en-IN/language.json
+++ b/V3/CHE/ELC/EMF_measurement/locale/en-IN/language.json
@@ -1,24 +1,24 @@
 $.i18n.en = {};
  jQuery.i18n.en.strings ={
-	"Determination of EMF of a Cell": "Determination of EMF of a Cell",
-	"SAVE": "SAVE",
-	"FULL SCREEN": "FULL SCREEN",
-	"EXIT": "EXIT",
-	"Developed by CDAC Mumbai & Amrita University <br> Under research grant from department of IT": "Developed by CDAC Mumbai & Amrita University <br> Under research grant from department of IT",
-	"Reset": "Reset",
+	"Determination of EMF of a Cell": "একটি কোষের EMF নির্ধারণ",
+	"SAVE": "সংরক্ষণ",
+	"FULL SCREEN": "পূর্ণ পর্দা",
+	"EXIT": "প্রস্থান",
+	"Developed by ": " দ্বারা বিকাশিত <br> আইটি ",
+	"Reset": "রিসেট",
 	"Ag(s) -->Ag<sup>+</sup>(aq)+e<sup>-</sup>": "Ag(s) -->Ag<sup>+</sup>(aq)+e<sup>-</sup>",
 	"Ag<sup>+</sup>(aq)+e<sup>-</sup>-->Ag(s)": "Ag<sup>+</sup>(aq)+e<sup>-</sup>-->Ag(s)",
 	"Ag<sup>+</sup>": "Ag<sup>+</sup>",
 	"Ag(s)": "Ag(s)",
-	"Select Electrode: ": "Select Electrode:",
-	"Cathode": "Cathode",
-	"Anode": "Anode",
-	"Concentration:": "Concentration:",
-	"Instruction": "Instruction",
-	"Temperature:": "Temperature:",
-	"Chemical Reaction": "Chemical Reaction",
-	"Overall": "Overall",
-	"Calculation of EMF:": "Calculation of EMF:",
+	"Select Electrode: ": "ইলেক্ট্রোড নির্বাচন করুন:",
+	"Cathode": "ক্যাথোড",
+	"Anode": "আনোড",
+	"Concentration:": "ঘনত্ব:",
+	"Instruction": "নির্দেশ",
+	"Temperature:": "তাপমাত্রা:",
+	"Chemical Reaction": "রাসায়নিক বিক্রিয়া",
+	"Overall": "সামগ্রিকভাবে",
+	"Calculation of EMF:": "EMF এর গণনা:",
 	"E cell = E&deg;cell-(RT/nF) ln ": "E cell = E&deg;cell-(RT/nF) ln ",
 	"Ba<sup>2+</sup>": "Ba<sup>2+</sup>",
 	"Barium": "Barium",
